--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="underline underline-offset-2">help</ul>
             </div>
         </div>
-        <div class="p-6 md:w-2/3 w-full">
+        <div class="p-6  w-full">
             <h1 class="subtitle-size text-textColor">Songs of Consciousness and Awakening</h1>
             <p class="texts-size text-textColor margin-three-top">
                 As you can see, most of these songs were composed during the '40s and '50s. I definitely believe that
